--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button button_mobile">заказать звонок</button>
+                    <button class="button button_mobile button_consultation">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -48,7 +48,7 @@
                         на все вопросы
                     </div>
                 </div>
-                <button class="button button_promo">заказать кОНСУЛЬТАЦИЮ</button>
+                <button class="button button_promo button_consultation">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -153,7 +153,7 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalogCard__subtitle">Пульсометр Suunto M2</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
@@ -234,7 +234,7 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalogCard__subtitle">Пульсометр Suunto M2</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
@@ -261,36 +261,7 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Polar FT1</div>
-                            <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-                            <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
-                        </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
-                            <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
-                    </div>
-                    <div class="catalogCard__footer">
-                        <hr>
-                        <div class="catalogCard__down">
-                            <div class="catalogCard__prices">
-                                <div class="catalogCard__oldPrice">4 750 руб.</div>
-                                <div class="catalogCard__price">4 500 руб.</div>
-                            </div>
-                            <button class="button button_card">КУПИТЬ</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="catalog__content">
-                <div class="catalogCard">
-                    <div class="catalogCard__wrapper">
-                        <div class="catalogCard__content">
-                            <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalogCard__subtitle">Пульсометр Polar FT4</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
@@ -319,7 +290,36 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalogCard__subtitle">Пульсометр Tonto TB7</div>
+                            <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                            <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
+                        </div>
+                        <ul class="catalogCard__item">
+                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            <a href="#" class="catalogCard__back">НАЗАД</a>
+                        </ul>
+                    </div>
+                    <div class="catalogCard__footer">
+                        <hr>
+                        <div class="catalogCard__down">
+                            <div class="catalogCard__prices">
+                                <div class="catalogCard__oldPrice">4 750 руб.</div>
+                                <div class="catalogCard__price">4 500 руб.</div>
+                            </div>
+                            <button class="button button_card">КУПИТЬ</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="catalog__content">
+                <div class="catalogCard">
+                    <div class="catalogCard__wrapper">
+                        <div class="catalogCard__content">
+                            <img src="img/photo.png" alt="photo" class="catalogCard__img">
+                            <div class="catalogCard__subtitle">Пульсометр Shinha UT2</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
@@ -346,7 +346,7 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalogCard__subtitle">Пульсометр Gogy REC5</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
@@ -415,5 +415,36 @@
             </div>
         </div>
     </footer>
+    <div class="blackout">
+        <div class="modal modal_mini" id="consultation">
+            <div class="modal__close">&times</div>
+            <div class="modal__title">Просто заполните форму заявки</div>
+            <div class="modal__desc">и мы перезвоним вам в течении 10 минут</div>
+            <div class="modal__attent">Пожалуйста переверните ваше устройство, чтобы заполнить форму</div>
+            <form action="#" class="form form_modal">
+                <input type="text" name="name" placeholder="Ваше имя" required>
+                <input type="tel" name="phone" placeholder="Ваш телефон" required>
+                <input type="email" name="email" placeholder="Ваш E-mail" required>
+                <button class="button button_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+        <div class="modal modal_mini" id="order">
+            <div class="modal__close">&times</div>
+            <div class="modal__title">Ваш заказ:</div>
+            <div class="modal__desc">Пульсометр Polar FT1</div>
+            <div class="modal__attent">Пожалуйста переверните ваше устройство, чтобы заполнить форму</div>
+            <form action="#" class="form form_modal">
+                <input type="text" name="name" placeholder="Ваше имя" required>
+                <input type="tel" name="phone" placeholder="Ваш телефон" required>
+                <input type="email" name="email" placeholder="Ваш E-mail" required>
+                <button class="button button_submit">Купить</button>
+            </form>
+        </div>
+        <div class="modal modal_thanks" id="thanks">
+            <div class="modal__close">&times</div>
+            <div class="modal__title">Спасибо за вашу заявку!</div>
+            <div class="modal__desc">Наш менеджер свяжется с вами в ближайшее время!</div>
+        </div>
+    </div>
 </body>
 </html>
