--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/tiny-slider.min.js" defer></script>
     <script src="js/just-validate.min.js" defer></script>
+    <script src="js/inputmask.min.js" defer></script>
     <script src="js/script.js" defer></script>
 </head>
 <body>
