--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <script src="js/script.js" defer></script>
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -448,5 +448,6 @@
             <div class="modal__desc">Наш менеджер свяжется с вами в ближайшее время!</div>
         </div>
     </div>
+    <a href="#up" class="pageup"><img src="icons/circle-up.svg" alt="up"></a>
 </body>
 </html>
