--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="advants__adv">
-                    <img src="icons/heart.png" alt="heart" class="advants__icon">
+                    <img src="icons/heart.png" alt="heart" class="advants__icon advants__icon_animate">
                     <div class="advants__title">Заботимся о здоровье</div>
                     <div class="advants__desc">
                         Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
