--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/ico.css">
     <link rel="stylesheet" href="css/tiny-slider.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/tiny-slider.min.js" defer></script>
     <script src="js/just-validate.min.js" defer></script>
     <script src="js/inputmask.min.js" defer></script>
+    <script src="js/wow.min.js" defer></script>
     <script src="js/script.js" defer></script>
 </head>
 <body>
@@ -378,7 +380,7 @@
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
             <div class="reviews__clients">
-                <div class="reviews__people">
+                <div class="reviews__people animate__animated animate__fadeInUp wow" data-wow-delay="0.5s">
                     <img src="img/photo_1.png" alt="photo" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__name">Ирина Иванченко</div>
@@ -386,7 +388,7 @@
                         <div class="reviews__feedback">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности.<br>Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>Новые цели - новый гаджет!<br><br>Спасибо, RunSmart! </div>
                     </div>
                 </div>
-                <div class="reviews__people">
+                <div class="reviews__people animate__animated animate__fadeInUp wow" data-wow-delay="0.5s">
                     <img src="img/photo_2.png" alt="photo" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__name">Иван Сёмочкин</div>
@@ -394,7 +396,7 @@
                         <div class="reviews__feedback">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал.<br>Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд.<br><br>С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
                     </div>
                 </div>
-                <div class="reviews__people">
+                <div class="reviews__people animate__animated animate__fadeInUp wow" data-wow-delay="0.5s">
                     <img src="img/photo_3.png" alt="photo" class="reviews__photo">
                     <div class="reviews__info">
                         <div class="reviews__name">Юлия Дашкина</div>
