--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,7 +42,7 @@
                         10 минут
                     </div>
                     <div class="promo__icon">
-                        <img src="icons/hand cart.png" alt="cart">
+                        <img src="icons/hand-cart.png" alt="cart">
                         Бесплатная
                         доставка
                     </div>
@@ -100,7 +100,7 @@
             </form>
         </div>
     </section>
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__slider">
                 <div>
@@ -116,7 +116,7 @@
             <button class="carousel__bPrev"><img src="icons/left.svg" alt="prev"></button>
             <button class="carousel__bNext"><img src="icons/right.svg" alt="next"></button>
         </div>
-    </section>
+    </div>
     <section class="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
@@ -134,13 +134,15 @@
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -161,13 +163,15 @@
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -188,13 +192,15 @@
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -215,13 +221,15 @@
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -242,13 +250,15 @@
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -269,13 +279,15 @@
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -294,17 +306,19 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Tonto TB7</div>
+                            <div class="catalogCard__subtitle">Пульсометр Umber UM5</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -323,17 +337,19 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Shinha UT2</div>
+                            <div class="catalogCard__subtitle">Пульсометр Eller T400</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -350,17 +366,19 @@
                     <div class="catalogCard__wrapper">
                         <div class="catalogCard__content">
                             <img src="img/photo.png" alt="photo" class="catalogCard__img">
-                            <div class="catalogCard__subtitle">Пульсометр Gogy REC5</div>
+                            <div class="catalogCard__subtitle">Пульсометр Gogy RT1</div>
                             <div class="catalogCard__desc">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalogCard__link">ПОДРОБНЕЕ</a> 
                         </div>
-                        <ul class="catalogCard__item">
-                            <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
-                            <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
-                            <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                            <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                        <div class="catalogCard__item">
+                            <ul>
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
+                            </ul>
                             <a href="#" class="catalogCard__back">НАЗАД</a>
-                        </ul>
+                        </div>
                     </div>
                     <div class="catalogCard__footer">
                         <hr>
@@ -419,9 +437,10 @@
             </div>
         </div>
     </footer>
+    <a href="#up" class="pageup"><img src="icons/circle-up.svg" alt="up"></a>
     <div class="blackout">
         <div class="modal modal_mini" id="consultation">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&times;</div>
             <div class="modal__title">Просто заполните форму заявки</div>
             <div class="modal__desc">и мы перезвоним вам в течении 10 минут</div>
             <div class="modal__attent">Пожалуйста переверните ваше устройство, чтобы заполнить форму</div>
@@ -433,7 +452,7 @@
             </form>
         </div>
         <div class="modal modal_mini" id="order">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&times;</div>
             <div class="modal__title">Ваш заказ:</div>
             <div class="modal__desc">Пульсометр Polar FT1</div>
             <div class="modal__attent">Пожалуйста переверните ваше устройство, чтобы заполнить форму</div>
@@ -445,11 +464,10 @@
             </form>
         </div>
         <div class="modal modal_thanks" id="thanks">
-            <div class="modal__close">&times</div>
+            <div class="modal__close">&times;</div>
             <div class="modal__title">Спасибо за вашу заявку!</div>
             <div class="modal__desc">Наш менеджер свяжется с вами в ближайшее время!</div>
         </div>
     </div>
-    <a href="#up" class="pageup"><img src="icons/circle-up.svg" alt="up"></a>
 </body>
 </html>
